# py-template

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  pyproject.toml
.claude/: settings.json
.claude/agents/: arch-validator.md  harness-reviewer.md  test-writer.md
.claude/rules/: ddd-application.md  ddd-domain.md  ddd-infrastructure.md  ddd-overview.md  ddd-presentation.md  testing.md
.claude/scripts/: emit_event.py
tests/: test_app.py
